# vectorwebsearch

./: Cargo.toml  main.cpp
alexsearch/: n_terms.bytes  terms.bytes  urls.bytes
libtch/: torch_api.cpp
search/: metadata.bytes  n_terms.bytes  terms.bytes  urls.bytes
src/: lib.rs  main.rs  sparse.rs  test_vec.rs  vectorizer.rs
src/vectorizers/: resources.rs  vectorizer.rs
templates/: search.html.tera
