[package]
name = "vec2search"
version = "0.1.0"
authors = ["Michael Shi <mfshi03@gmail.com>"]
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["macros", "rt-threaded", "time", "io-driver", "fs"] }
url = "2.1.1"
reqwest = { version = "0.10.8", features = ["blocking", "native-tls", "trust-dns", "stream"] }
regex = "1.3.9"
http = "0.2.1"
cbloom = "0.1.3"
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["tera_templates"] }
serde = { version = "1.0", features = ["derive"] }
rust-bert = "0.21.0"
